# opengl_demo

./: CMakeLists.txt
include/glad/: glad.h
include/tools/: Shader.h  tools.h  window.h
lib/: glfw3.lib
src/: glad.c  main.cpp
src/01_helloworld/: main.cpp
src/02_hello_triangle/: main.cpp
src/03_two_triangles/: main.cpp
src/04_shader_glsl/: main.cpp  main2.cpp
src/05_shader_class/: main.cpp
src/06_texture/: fragment.glsl  main.cpp  vertex.glsl
src/07_transform/: main.cpp  vertex.glsl
src/08_3d/: fragment.glsl  main.cpp
src/09_imgui/: main.cpp  vertex.glsl
src/tools/: Shader.cpp  tools.cpp  window.cpp
